--- a/Kubernetes-minikube/kubernetes-minikube-scripts/08-Ingress-Service-.yml
+++ b/Kubernetes-minikube/kubernetes-minikube-scripts/08-Ingress-Service-.yml
@@ -12,7 +12,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: frontend
+                name: frontend-service
                 port:
                   number: 8082
 
@@ -20,6 +20,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: backend
+                name: backend-service
                 port:
                   number: 8080
