adding liveness and readiness probes

--- a/full_stack_docker_app/springboot_app/springboot/src/main/resources/application.properties
+++ b/full_stack_docker_app/springboot_app/springboot/src/main/resources/application.properties
@@ -11,12 +11,11 @@ spring.data.jpa.repositories.enabled=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 
+# Application Port
 server.port=8080
-
-#Logging
-logging.level.root=INFO,CONSOLE
-logging.level.com.cburleson.rdfx=TRACE
-logging.pattern.file= %d{yyyy-MMM-dd HH:mm:ss.SSS} %-5level [%thread] %logger{15} - %msg%n
 
 #output to a file
 logging.file=../Logs/evm.log
+
+# enabling health endpoints for 'health probes'
+management.health.probes.enabled=true
